[gd_scene load_steps=13 format=3 uid="uid://dtolg6hhglcqr"]

[ext_resource type="Texture2D" uid="uid://bo2jgn44buo3n" path="res://Sprites/DECA.png" id="1_tnp4d"]
[ext_resource type="Script" path="res://Code/Bosses/DECA.gd" id="1_vx14w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3inra"]
radius = 3.8
height = 18.4

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ue61m"]

[sub_resource type="Animation" id="Animation_hnj7i"]
resource_name = "Die"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39, 31]
}

[sub_resource type="Animation" id="Animation_2y242"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0]
}

[sub_resource type="Animation" id="Animation_7nxe7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_m1nj7"]
resource_name = "ShootGun"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_6x4fm"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_3y53c"]
resource_name = "reload"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [24, 25, 26]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r1ykp"]
_data = {
"Die": SubResource("Animation_hnj7i"),
"Idle": SubResource("Animation_2y242"),
"RESET": SubResource("Animation_7nxe7"),
"ShootGun": SubResource("Animation_m1nj7"),
"Walk": SubResource("Animation_6x4fm"),
"reload": SubResource("Animation_3y53c")
}

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_vrkk1"]

[node name="DecaBase" type="CharacterBody2D"]
scale = Vector2(5, 5)
script = ExtResource("1_vx14w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3inra")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, -0.2)
collision_layer = 5
collision_mask = 5

[node name="HitBoxColilsion" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_ue61m")
debug_color = Color(0.698039, 0.133333, 0.313726, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_tnp4d")
hframes = 8
vframes = 5

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r1ykp")
}
tree_root = SubResource("AnimationNodeStateMachine_vrkk1")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r1ykp")
}

[node name="attack_cooldown" type="Timer" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
